--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,23 +19,21 @@ dependencies:
   firebase_auth: ^0.16.1
   firebase_storage: ^3.1.6
   firebase_messaging: ^6.0.16
-  
-  #Rest
+  shared_preferences: ^0.5.7+3
   retrofit: ^1.3.4
-
-  #ReactiveX
+  logger: ^0.9.1
   rxdart: ^0.24.1
-  
-  # Inject
   get_it: ^4.0.2
-  
+  auto_route: ^0.2.1
+
   # State Managment
   mobx: ^1.2.1+1
-  
-  # Navigation
-  auto_route: ^0.2.1
-  
+  flutter_mobx: ^1.1.0+1
 
+  
+  #Recorder
+  # audio_recorder: ^1.0.2
+  
   # Design
   cached_network_image: ^2.2.0+1
   lottie: ^0.4.0+1
@@ -60,3 +58,8 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+
+assets:
+    - assets/videos/
+    - assets/animations/
+    - assets/images
