--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,11 +16,11 @@ dependencies:
   #Firestore
   firebase_core: ^0.4.5
   firebase_analytics: ^5.0.15
-  firebase_auth: ^0.16.1
   firebase_storage: ^3.1.6
   firebase_messaging: ^6.0.16
   shared_preferences: ^0.5.7+3
   retrofit: ^1.3.4
+  dio: ^3.0.9
   logger: ^0.9.1
   rxdart: ^0.24.1
   get_it: ^4.0.2
@@ -45,6 +45,7 @@ dependencies:
   keyboard_visibility: ^0.5.6
   image_picker: ^0.6.7+2
   google_fonts: ^1.1.0
+  json_annotation: ^3.0.1
   
     
 dev_dependencies:
@@ -54,6 +55,7 @@ dev_dependencies:
   mobx_codegen: ^1.1.0+1
   auto_route_generator: ^0.2.1+3
   retrofit_generator: ^1.3.7+2
+  json_serializable: ^3.2.5
 
 
 flutter:
