--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,7 +13,6 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^0.1.3
   
-  #Firestore
   firebase_core: ^0.4.5
   firebase_analytics: ^5.0.15
   firebase_storage: ^3.1.6
@@ -25,16 +24,11 @@ dependencies:
   rxdart: ^0.24.1
   get_it: ^4.0.2
   auto_route: ^0.2.1
-
-  # State Managment
+  dartz: ^0.9.1
+  freezed_annotation: ^0.7.1
+  json_annotation: ^3.0.1
   mobx: ^1.2.1+1
   flutter_mobx: ^1.1.0+1
-
-  
-  #Recorder
-  # audio_recorder: ^1.0.2
-  
-  # Design
   cached_network_image: ^2.2.0+1
   lottie: ^0.4.0+1
   animations: ^1.1.1
@@ -45,13 +39,14 @@ dependencies:
   keyboard_visibility: ^0.5.6
   image_picker: ^0.6.7+2
   google_fonts: ^1.1.0
-  json_annotation: ^3.0.1
+  
   
     
 dev_dependencies:
   flutter_test:
     sdk: flutter
   build_runner: ^1.10.0
+  freezed: ^0.10.9
   mobx_codegen: ^1.1.0+1
   auto_route_generator: ^0.2.1+3
   retrofit_generator: ^1.3.7+2
