--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,16 +14,16 @@ dependencies:
   cupertino_icons: ^0.1.3
   
   firebase_core: ^0.4.5
-  firebase_analytics: ^5.0.15
   firebase_storage: ^3.1.6
   firebase_messaging: ^6.0.16
+  pusher_websocket_flutter: ^0.2.0
   shared_preferences: ^0.5.7+3
   retrofit: ^1.3.4
   dio: ^3.0.9
   logger: ^0.9.1
   rxdart: ^0.24.1
   get_it: ^4.0.2
-  auto_route: ^0.2.1
+  auto_route: ^0.6.1
   dartz: ^0.9.1
   freezed_annotation: ^0.7.1
   json_annotation: ^3.0.1
@@ -39,8 +39,6 @@ dependencies:
   keyboard_visibility: ^0.5.6
   image_picker: ^0.6.7+2
   google_fonts: ^1.1.0
-  
-  
     
 dev_dependencies:
   flutter_test:
@@ -48,7 +46,7 @@ dev_dependencies:
   build_runner: ^1.10.0
   freezed: ^0.10.9
   mobx_codegen: ^1.1.0+1
-  auto_route_generator: ^0.2.1+3
+  auto_route_generator: ^0.6.0
   retrofit_generator: ^1.3.7+2
   json_serializable: ^3.2.5
 
