--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   mobx: ^1.2.1+1
   flutter_mobx: ^1.1.0+1
   cached_network_image: ^2.2.0+1
+  flutter_svg: ^0.17.3+1
   lottie: ^0.4.0+1
   animations: ^1.1.1
   simple_animations: ^1.3.3
@@ -38,8 +39,8 @@ dependencies:
   dotted_border: ^1.0.5
   keyboard_visibility: ^0.5.6
   image_picker: ^0.6.7+2
-  google_fonts: ^1.1.0
-    
+  easy_localization: ^2.3.2
+  easy_model: ^1.0.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -53,8 +54,21 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  fonts:
+    - family: RubikBold
+      fonts:
+        - asset: assets/fonts/Rubik-Bold.ttf
+    - family: RubikRegular
+      fonts:
+        - asset: assets/fonts/Rubik-Regular.ttf
+    - family: RubikMedium
+      fonts:
+        - asset: assets/fonts/Rubik-Medium.ttf
 
 assets:
     - assets/videos/
     - assets/animations/
-    - assets/images
+    - assets/images/
+    - assets/translations/
+
+  
