--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,7 +40,9 @@ dependencies:
   keyboard_visibility: ^0.5.6
   image_picker: ^0.6.7+2
   easy_localization: ^2.3.2
-  easy_model: ^1.0.1
+  pin_code_fields: ^3.1.2
+  
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -69,7 +71,3 @@ flutter:
     - family: RubikMedium
       fonts:
         - asset: assets/fonts/Rubik-Medium.ttf
-
-
-
-  
