--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   pin_code_fields: ^3.1.2
   device_simulator: ^0.9.6
   modal_bottom_sheet: ^0.2.0+1
+  vibration: ^1.4.0
 
 dev_dependencies:
   flutter_test:
