--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,7 +12,7 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^0.1.3
-  
+  chat_pickers: ^0.2.2
   firebase_core: ^0.4.5
   firebase_storage: ^3.1.6
   firebase_messaging: ^6.0.16
@@ -36,7 +36,6 @@ dependencies:
   simple_animations: ^1.3.3
   flutter_statusbarcolor: ^0.2.3
   flushbar: ^1.10.4
-  dotted_border: ^1.0.5
   keyboard_visibility: ^0.5.6
   image_picker: ^0.6.7+2
   easy_localization: ^2.3.2
