--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,7 +25,7 @@ dependencies:
   get_it: ^4.0.2
   auto_route: ^0.6.1
   dartz: ^0.9.1
-  freezed_annotation: ^0.7.1
+  freezed_annotation: ^0.11.0
   json_annotation: ^3.0.1
   mobx: ^1.2.1+1
   flutter_mobx: ^1.1.0+1
@@ -35,25 +35,24 @@ dependencies:
   animations: ^1.1.1
   simple_animations: ^1.3.3
   flushbar: ^1.10.4
-  keyboard_visibility: ^0.5.6
   image_picker: ^0.6.7+2
   easy_localization: ^2.3.2
   pin_code_fields: ^3.1.2
   device_simulator: ^0.9.6
   modal_bottom_sheet: ^0.2.0+1
   vibration: ^1.4.0
-  
+  keyboard_visibility: ^0.5.6
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   build_runner: ^1.10.0
-  freezed: ^0.10.9
+  freezed: ^0.11.4
   mobx_codegen: ^1.1.0+1
   auto_route_generator: ^0.6.0
   retrofit_generator: ^1.3.7+2
   json_serializable: ^3.2.5
-
+  lint: ^1.2.0
 
 flutter:
   uses-material-design: true
@@ -70,4 +69,4 @@ flutter:
         - asset: assets/fonts/Rubik-Regular.ttf
     - family: RubikMedium
       fonts:
-        - asset: assets/fonts/Rubik-Medium.ttf
+        - asset: assets/fonts/Rubik-Medium.ttf 
