--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,7 +12,8 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^0.1.3
-  chat_pickers: ^0.2.2
+  bubble: ^1.1.9+1
+  # chat_pickers: ^0.2.2
   firebase_core: ^0.4.5
   firebase_storage: ^3.1.6
   firebase_messaging: ^6.0.16
