--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,7 @@ dependencies:
   mobx: ^1.2.1+1
   flutter_mobx: ^1.1.0+1
   cached_network_image: ^2.2.0+1
-  flutter_svg: ^0.17.3+1
+  flutter_svg: ^0.18.0
   lottie: ^0.4.0+1
   animations: ^1.1.1
   simple_animations: ^1.3.3
