--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,7 +42,7 @@ dependencies:
   device_simulator: ^0.9.6
   modal_bottom_sheet: ^0.2.0+1
   vibration: ^1.4.0
-  keyboard_visibility: ^0.5.6
+  flutter_cache_manager: ^1.1.3
 
 dev_dependencies:
   flutter_test:
