--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   modal_bottom_sheet: ^0.2.0+1
   vibration: ^1.4.0
   flutter_cache_manager: ^1.1.3
+  photo_view: ^0.10.0
+
 
 dev_dependencies:
   flutter_test:
