--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,9 @@ dependencies:
   vibration: ^1.4.0
   flutter_cache_manager: ^1.1.3
   photo_view: ^0.10.0
+  video_thumbnail: ^0.2.2
+  video_player: ^0.10.11+2
+
 
 
 dev_dependencies:
