--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: iconapp
 description: Icon application
 
-publish_to: 'none' 
+publish_to: 'none'
 
 version: 1.0.0+1
 
@@ -32,7 +32,7 @@ dependencies:
   flutter_mobx: ^1.1.0+1
   cached_network_image: ^2.2.0+1
   flutter_svg: ^0.18.0
-  lottie: ^0.4.0+1
+  lottie: ^0.5.1
   animations: ^1.1.1
   simple_animations: ^1.3.3
   flushbar: ^1.10.4
@@ -47,8 +47,6 @@ dependencies:
   video_thumbnail: ^0.2.2
   video_player: ^0.10.11+2
 
-
-
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -62,10 +60,11 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
-  
+
   assets:
     - assets/images/
     - assets/translations/
+    - assets/animations/
   fonts:
     - family: RubikBold
       fonts:
@@ -75,4 +74,4 @@ flutter:
         - asset: assets/fonts/Rubik-Regular.ttf
     - family: RubikMedium
       fonts:
-        - asset: assets/fonts/Rubik-Medium.ttf 
+        - asset: assets/fonts/Rubik-Medium.ttf
