--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,7 +21,7 @@ dependencies:
   shared_preferences: ^0.5.7+3
   retrofit: ^1.3.4
   dio: ^3.0.9
-  logger: ^0.9.1
+  logger: ^0.9.2
   rxdart: ^0.24.1
   get_it: ^4.0.2
   auto_route: ^0.6.1
@@ -46,6 +46,9 @@ dependencies:
   photo_view: ^0.10.0
   video_thumbnail: ^0.2.2
   video_player: ^0.10.11+2
+  audio_recorder: ^1.0.2
+  audioplayers: ^0.16.0
+  permission_handler: ^5.0.1+1
 
 dev_dependencies:
   flutter_test:
