--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -60,7 +60,8 @@ flutter {
 }
 
 dependencies {
+    implementation 'com.google.firebase:firebase-messaging:20.2.4'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'com.google.firebase:firebase-analytics:17.4.3'/**/
+    implementation 'com.google.firebase:firebase-analytics:17.5.0'/**/
 }
 apply plugin: 'com.google.gms.google-services'
