--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,7 +12,7 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^0.1.3
-  bubble: ^1.1.9+1
+  # bubble: ^1.1.9+1
   # chat_pickers: ^0.2.2
   firebase_core: ^0.4.5
   firebase_storage: ^3.1.6
@@ -46,11 +46,10 @@ dependencies:
   photo_view: ^0.10.0
   video_thumbnail: ^0.2.2
   video_player: ^0.10.11+2
-  audio_recorder: ^1.0.2
   audioplayers: ^0.16.0
   permission_handler: ^5.0.1+1
-  # flutter_slidable: ^0.5.5
-  
+  flutter_audio_recorder: ^0.5.5
+  url_launcher: ^5.5.1
 
 dev_dependencies:
   flutter_test:
@@ -80,3 +79,4 @@ flutter:
     - family: RubikMedium
       fonts:
         - asset: assets/fonts/Rubik-Medium.ttf
+
