--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  plain_notification_token: ^0.0.1
+  device_info: ^0.4.2+7
   cupertino_icons: ^0.1.3
   firebase_crashlytics: ^0.1.4+1
   firebase_core: ^0.4.5
