--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -19,7 +19,7 @@
 		<string>heb</string>
 	</array>
 	<key>CFBundleName</key>
-	<string>iconapp</string>
+	<string>ICON</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
