--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   permission_handler: ^5.0.1+1
   flutter_audio_recorder: ^0.5.5
   url_launcher: ^5.5.1
+  flutter_statusbarcolor: ^0.2.3
 
 dev_dependencies:
   flutter_test:
