--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,8 @@ dependencies:
   flutter_audio_recorder: ^0.5.5
   url_launcher: ^5.5.1
   flutter_statusbarcolor: ^0.2.3
+  flutter_image_compress: ^0.7.0
+
 
 dev_dependencies:
   flutter_test:
