--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_local_notifications: ^1.4.4+4
+  scroll_to_index: 1.0.6
   device_info: ^0.4.2+7
   cupertino_icons: ^0.1.3
   firebase_crashlytics: ^0.1.4+1
