--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,44 +11,44 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  # flutter_local_notifications: ^1.4.4+4
+  flutter_local_notifications: ^1.4.4+4
   scroll_to_index: 1.0.6
-  device_info: ^0.4.2+7
-  cupertino_icons: ^0.1.3
-  firebase_crashlytics: ^0.1.4+1
-  firebase_core: ^0.4.5
-  firebase_storage: ^3.1.6
-  firebase_messaging: ^6.0.16
+  device_info: ^0.4.2+8
+  cupertino_icons: ^1.0.0
+  firebase_crashlytics: ^0.2.0
+  firebase_core: ^0.5.0
+  firebase_storage: ^4.0.0
+  firebase_messaging: ^7.0.0
   pusher_websocket_flutter: ^0.2.0
-  shared_preferences: ^0.5.7+3
+  shared_preferences: ^0.5.12
   retrofit: ^1.3.4
-  dio: ^3.0.9
+  dio: ^3.0.10
   logger: ^0.9.2
   rxdart: ^0.24.1
-  get_it: ^4.0.2
-  auto_route: ^0.6.1
+  get_it: ^5.0.1
+  auto_route: ^0.6.7
   dartz: ^0.9.1
-  freezed_annotation: ^0.11.0
-  json_annotation: ^3.0.1
+  freezed_annotation: ^0.12.0
+  json_annotation: ^3.1.0
   mobx: ^1.2.1+2
-  flutter_mobx: ^1.1.0+1
-  cached_network_image: ^2.2.0+1
-  flutter_svg: ^0.18.0
-  lottie: ^0.5.1
-  animations: ^1.1.1
-  simple_animations: ^1.3.3
+  flutter_mobx: ^1.1.0+2
+  cached_network_image: ^2.3.2+1
+  flutter_svg: ^0.19.0
+  lottie: ^0.6.0
+  animations: ^1.1.2
+  simple_animations: ^2.2.2
   flushbar: ^1.10.4
-  image_picker: ^0.6.7+2
-  easy_localization: ^2.3.2
-  pin_code_fields: ^3.1.2
+  image_picker: ^0.6.7+11
+  easy_localization: ^2.3.3
+  pin_code_fields: ^5.1.0
   device_simulator: ^0.9.6
-  modal_bottom_sheet: ^0.2.0+1
-  vibration: ^1.4.0
-  flutter_cache_manager: ^1.1.3
+  modal_bottom_sheet: ^0.2.2
+  vibration: ^1.5.0
+  flutter_cache_manager: ^1.4.2
   flutter_swiper: ^1.1.6
   video_thumbnail: ^0.2.2
-  video_player: ^0.10.11+2
-  audioplayers: ^0.16.0
+  video_player: ^0.10.12+4
+  audioplayers: ^0.16.1
   permission_handler: ^5.0.1+1
   flutter_audio_recorder: ^0.5.5
   url_launcher: ^5.5.1
@@ -60,11 +60,11 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   build_runner: ^1.10.0
-  freezed: ^0.11.4
+  freezed: ^0.12.1
   mobx_codegen: ^1.1.0+1
-  auto_route_generator: ^0.6.0
+  auto_route_generator: ^0.6.8
   retrofit_generator: ^1.3.7+2
-  json_serializable: ^3.2.5
+  json_serializable: ^3.5.0
   lint: ^1.2.0
 
 flutter:
