--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   url_launcher: ^5.5.1
   flutter_statusbarcolor: ^0.2.3
   flutter_image_compress: ^0.7.0
+  video_compress: ^2.0.0
 
 
 dev_dependencies:
