--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,10 +15,10 @@ dependencies:
   scroll_to_index: 1.0.6
   device_info: ^0.4.2+8
   cupertino_icons: ^1.0.0
-  firebase_crashlytics: ^0.2.0
-  firebase_core: ^0.5.0
-  firebase_storage: ^4.0.0
-  firebase_messaging: ^7.0.0
+  firebase_crashlytics: ^0.1.4+1
+  firebase_core: ^0.4.5
+  firebase_storage: ^3.1.6
+  firebase_messaging: ^6.0.16
   pusher_websocket_flutter: ^0.2.0
   shared_preferences: ^0.5.12
   retrofit: ^1.3.4
