--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,8 @@ dependencies:
   video_compress: ^2.0.0
   video_thumbnail: ^0.2.2
   file_picker: ^2.0.3
+  flutter_animated_dialog: ^1.1.0
+
 
 dev_dependencies:
   flutter_test:
