--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,8 +53,9 @@ dependencies:
   video_thumbnail: ^0.2.2
   file_picker: ^2.0.3
   flutter_animated_dialog: ^1.1.0
+  flutter_linkify: ^3.1.3
 
-
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
