--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -39,6 +39,8 @@
 		<key>NSAllowsArbitraryLoads</key>
 		<true/>
 	</dict>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>select a video from the gallery to the chat</string>
 	<key>NSAppleMusicUsageDescription</key>
 	<string>Playing recorded messages</string>
 	<key>NSCalendarsUsageDescription</key>
