--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  image_gallery_saver: '^1.6.0'
   audioplayers: ^0.16.1
   auto_route: ^0.6.7
   cached_network_image: ^2.3.2+1
