--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,6 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  image_gallery_saver: '^1.6.0'
   audioplayers: ^0.16.1
   auto_route: ^0.6.7
   cached_network_image: ^2.3.2+1
@@ -19,6 +18,7 @@ dependencies:
   dartz: ^0.9.1
   device_info: ^0.4.2+8
   dio: ^3.0.10
+  dio_http_cache: ^0.2.11
   easy_localization: ^2.3.3
   file_picker: ^2.0.3
   firebase_core: ^0.4.5
@@ -37,6 +37,7 @@ dependencies:
   flutter_swiper: ^1.1.6
   freezed_annotation: ^0.12.0
   get_it: ^5.0.1
+  image_gallery_saver: ^1.6.0
   image_picker: ^0.6.7+11
   json_annotation: ^3.1.0
   logger: ^0.9.2
