--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,7 +60,6 @@ dependencies:
   tutorial_coach_mark: ^0.5.1
   flutter_cache_manager: ^2.0.0
 
-
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -89,3 +88,5 @@ flutter:
     - family: RubikMedium
       fonts:
         - asset: assets/fonts/Rubik-Medium.ttf
+flutter_intl:
+  enabled: true
