--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,7 +12,7 @@ dependencies:
   flutter:
     sdk: flutter
   image_cropper: ^1.3.1
-  
+  flutter_google_ad_manager: ^0.11.1
   audioplayers: ^0.16.1
   auto_route: ^0.6.7
   cached_network_image: ^2.3.2+1
