--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: Icon application
 
 publish_to: 'none'
 
-version: 2.0.2+14
+version: 2.0.2+15
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
@@ -11,6 +11,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  social_share: ^2.0.5
   image_cropper: ^1.3.1
   audioplayers: ^0.16.1
   auto_route: ^0.6.9
@@ -26,10 +27,7 @@ dependencies:
   firebase_crashlytics: ^0.2.3
   firebase_messaging: ^7.0.3
   firebase_storage: ^5.0.1
-  
-  # firebase_admob: ^0.10.2
   admob_flutter: ^1.0.1
-
   flushbar: ^1.10.4
   flutter_audio_recorder: ^0.5.5
   flutter_image_compress: ^0.7.0
@@ -66,8 +64,6 @@ dependencies:
   firebase_dynamic_links: ^0.5.1
   package_info: ^0.4.3+2
   launch_review: ^2.0.0
-  flutter_google_ad_manager: ^0.11.1
-  device_info: ^1.0.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
